better covers to all acts and regulations, more dates, bullet point fixes

--- a/src/css/legislation_fixes.scss
+++ b/src/css/legislation_fixes.scss
@@ -91,6 +91,14 @@
         margin-left: 1.2em;
         padding-left: 2em
     }
+
+    div.cover-reprint-note{
+        border-top-width:0px;
+        border-bottom-width:0px;
+    }
+     div.para{
+        margin-top:0;
+     }
 }
 
 /*
